# kaggle-santa-2019

./: Makefile  README.md  cli.py  pyproject.toml  tox.ini
docs/: model.md
santa_19/: cli.py  costs.py  gurobi.py  inputs.py  parameters.py  result.py  solution.py  solver.py  typing.py
tests/: test_santa_19.py
